Improve RFC8040 tests
We have a few tests using @Test(expected), improve them by using
assertThrows() and performing some assertions.

Change-Id: I378c1108c43e42f7af2b0dc54bab23263a2acae3
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>